# api/v2/openapi.yaml
@@ -124,6 +124,12 @@ paths:
       operationId: deleteSilence
       description: Delete a silence by its ID
       parameters:
+        - in: body
+          name: secret
+          description: secret
+          required: true
+          schema:
+            type: string
         - in: path
           name: silenceID
           type: string
@@ -133,6 +139,8 @@ paths:
       responses:
         '200':
           description: Delete silence response
+        '400':
+          $ref: '#/responses/BadRequest'
         '404':
           description: A silence with the specified ID was not found
         '500':
@@ -363,6 +371,8 @@ definitions:
       createdBy:
         type: string
       comment:
+        type: string
+      secret:
         type: string
       annotations:
         $ref: "#/definitions/labelSet"
